syntax = "proto3";
package kitty_chan;

/**
* Handle Events from kitty chan Events
**/
service EventsService{
  rpc messageCreate (IGuildMessage) returns (NoResponse);
  rpc messageUpdate (IGuildMessageUpdate) returns (NoResponse);
  rpc messageReactionAdd (IMessageReaction) returns (NoResponse);
  rpc messageReactionRemove (IMessageReaction) returns (NoResponse);
  rpc guildCreate (IBasicGuild) returns (NoResponse);
  rpc guildDelete (IBasicGuild) returns (NoResponse);
  rpc guildMemberAdd (IGuildMember) returns (NoResponse);
  rpc guildMemberRemove (IGuildMember) returns (NoResponse);
}

/**Common**/
message NoResponse{}

/**Guild Message**/
message IGuildMessage{
  string guildId = 1;
  string guildName = 2;
  string channelId = 3;
  string messageId = 4;
  string userId = 5;
  string username = 6;
  string avatar = 7;
  string messageContent = 8;
  IMessageMentions mentions = 9;
  repeated IMessageAttachments attachments = 10;
  bool isBot = 11;
}

message IMessageMentions{
  bool hasMention = 1;
  bool everyone = 2;
  repeated IMessageMentionUsers users = 3;
  repeated IMessageMentionRoles roles = 4;
}

message IMessageMentionUsers{
  string userId = 1;
}

message IMessageMentionRoles{
  string roleId = 1;
}

message IMessageAttachments{
  string name = 1;
  string id = 2;
  int64 size = 3;
  string url = 4;
  string proxyURL = 5;
  int64 height = 6;
  int64 width = 7;
  string contentType = 8;
  string description = 9;
  bool ephemeral = 10;
}

/*Guild Messgae Update*/
message IGuildMessageUpdate{
  string guildId = 1;
  string channelId = 2;
  string messageId = 3;
  string userId = 4;
  string username = 5;
  string avatar = 6;
  string oldMessage = 7;
  string newMessage = 8;
  string createdAt = 9;
  string editedAt = 10;
  bool isBot = 11;
}

message IBasicGuild{
  string guildId = 1;
  string guildName = 2;
}

message IGuildMember{
  string guildId = 1;
  string guildName = 2;
  string userId = 3;
  string userName = 4;
}

message IMessageReaction{
  string guildId = 1;
  string channelId = 2;
  string messageId = 3;
  string userId = 4;
  string messageContent = 5;
  bool isBot = 6;
  IEmoji emoji = 7;
}

message IEmoji{
  bool animated = 1;
  string id = 2;
  string name = 3;
  string createdAt = 4;
}